# cf_fleet_takeoff

./: README.md  package.xml  setup.cfg  setup.py
cf_fleet_takeoff/: circle_node.py  lissajous_node.py  lissajous_takeoff_node.py  takeoff_node.py
launch/: fleet_circle.launch.py  fleet_lissajous.launch.py  fleet_lissajous_takeoff.launch.py  fleet_takeoff.launch.py
