<?xml version="1.0"?>
<package format="3">
  <name>cf_fleet_takeoff</name>
  <version>0.1.0</version>
  <description>rclpy node to take off a fleet of Crazyflies and hover at 1 m using per-UAV cmd_vel + odom</description>
  <maintainer email="you@example.com">Ricardo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

